Fix tile scaling, tile visibility, and UI alignment issues

--- a/scripts/loddlenaut-map.css
+++ b/scripts/loddlenaut-map.css
@@ -6,5 +6,11 @@
 }
 
 .leaflet-control-layers-expanded {
-    width: 14em;
+    width: 15em;
+}
+
+/* Make the layer tree children align better */
+.leaflet-layerstree-nevershow:not(.leaflet-layerstree-header) {
+    display: inline;
+    visibility: hidden;
 }
